package com.you.lld.problems.chess.model;

public enum Color {
    WHITE, BLACK
}
