classDiagram

    class ChessGameImpl {
        -final Board board
        -Color currentPlayer
        -boolean gameOver
        +makeMove() boolean
        +isValidMove() boolean
        +getCurrentPlayer() Color
        +isGameOver() boolean
    }

    class PieceType {
        <<enumeration>>
        KING
        QUEEN
        ROOK
        BISHOP
        KNIGHT
        PAWN
    }

    class Position {
        -final int row
        -final int col
        +getRow() int
        +getCol() int
        +isValid() boolean
    }

    class Board {
        +initialize() void
        +getPiece() Piece
        +setPiece() void
        +movePiece() void
    }

    class Piece {
        -final PieceType type
        -final Color color
        -boolean hasMoved
        +getType() PieceType
        +getColor() Color
        +hasMoved() boolean
        +setMoved() void
    }

    class Color {
        <<enumeration>>
        WHITE
        BLACK
    }

    class ChessGame {
        <<interface>>
        +move(from, to) boolean
        +isCheck() boolean
        +isCheckmate() boolean
    }

    class MoveNotation {

    Piece --> PieceType
    Piece --> Color
    ChessGameImpl --> Board
    ChessGameImpl --> Color
    ChessGameImpl --> Position
    Board --> Piece
    Board --> Position
    MoveNotation --> Position
